2014-09-03  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* base/osp.c (struct osp_param): New struct.
	(osp_param_str_to_type, osp_get_scanner_params, osp_param_new)
	(osp_param_free, osp_param_id, osp_param_desc, osp_param_name)
	(osp_param_type): New functions.

	* base/osp.h: Add function prototypes and struct typedef.
	(osp_param_type_t): New enum.

2014-09-03  Michael Wiegand <michael.wiegand@greenbone.net>

	* doc/CMakeLists.txt: Use appropriate text for second paragraph of the
	license notice.

2014-09-03  Michael Wiegand <michael.wiegand@greenbone.net>

	Make license of CMakeLists.txt files consistent.

	* doc/CMakeLists.txt: Change license from LGPLv2+ to GPLv2+.

	* misc/CMakeLists.txt: Change license from GPLv2 to GPLv2+.

2014-09-02  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* nasl/nasl_lex_ctxt.h (struct_lex_ctxt): Add line_nb element.

	* nasl/nasl_debug (nasl_perror): Print the error's line number after the
	script name.

	* nasl/exec.c (nasl_exec): Set the lexical context's line number.

2014-09-01  Michael Wiegand <michael.wiegand@greenbone.net>

	* CMakeLists.txt: Re-add parts removed in r20187 as a fallback for
	finding the hiredis library. Upstream does not (yet) support
	pkg-config, so pkg-config files may or may not exist depending on the
	distribution.

2014-09-01  Michael Wiegand <michael.wiegand@greenbone.net>

	* CMakeLists.txt, openvas_cmake_macros,
	nasl/tests/test_script_signing.sh, omp/CMakeLists.txt: Ensure the
	GPLv2+ license notice uses the paragraph suggested by the Free
	Software Foundation.

2014-09-01  Michael Wiegand <michael.wiegand@greenbone.net>

	* nasl/CMakeLists.txt, nasl/nasl_builtin_nmap.c,
	nasl/nasl_builtin_plugins.h, nasl/nasl_cert.c, nasl/nasl_cert.h,
	nasl/nasl_isotime.c, nasl/nasl_isotime.h, nasl/nasl_signature.c,
	nasl/nasl_signature.h, nasl/nasl_smb.c, nasl/nasl_smb.h,
	nasl/nasl_ssh.c, nasl/nasl_ssh.h, nasl/nasl_wmi.c, nasl/nasl_wmi.h,
	nasl/ntlmssp.c, nasl/ntlmssp.h, nasl/openvas_smb_interface.h,